// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search Input Snapshot Test 1`] = `
<body>
  <div>
    <div
      class="flex flex-col shadow-[0px_1px_2px_0px_rgba(27,32,41,0.06)] "
    >
      <label
        class=" label-medium text-text-dark mb-2 flex items-center text-left font-medium "
        for="user-input"
      >
        This is Label
      </label>
      <div
        aria-label=""
        class=" !h-12 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
        role="textbox"
        tabindex="-1"
      >
        <div
          class="mr-2 text-icon-icon "
        >
          <div
            class="flex"
            tabindex="-1"
          >
            <svg
              class=""
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_1421_18480)"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.96 10.2C15.96 13.3812 13.3812 15.96 10.2 15.96C7.01884 15.96 4.44 13.3812 4.44 10.2C4.44 7.01884 7.01884 4.44 10.2 4.44C13.3812 4.44 15.96 7.01884 15.96 10.2ZM14.7567 15.7749C13.5155 16.7906 11.9289 17.4 10.2 17.4C6.22355 17.4 3 14.1764 3 10.2C3 6.22355 6.22355 3 10.2 3C14.1765 3 17.4 6.22355 17.4 10.2C17.4 11.9289 16.7906 13.5155 15.7749 14.7567L20.7891 19.7709C21.0703 20.0521 21.0703 20.5079 20.7891 20.7891C20.5079 21.0703 20.0521 21.0703 19.7709 20.7891L14.7567 15.7749Z"
                  fill="#3B475B"
                  fill-rule="evenodd"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_1421_18480"
                >
                  <rect
                    fill="white"
                    height="24"
                    width="24"
                  />
                </clippath>
              </defs>
            </svg>
            <div />
          </div>
        </div>
        <div
          class="relative flex-1"
        >
          <input
            class=" placeholder:!text-text-light placeholder:!animate-scroll search-icon-remover paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="user-input"
            helpertext="This is helper Text"
            id="user-input"
            name="user-input"
            placeholder=""
            tabindex="0"
            type="text"
            value="Abc"
          />
        </div>
        <div
          class="ml-2 text-icon-icon cursor-pointer"
        >
          <button
            class="flex justify-center"
            tabindex="0"
            type="button"
          >
            <div
              class="flex"
              tabindex="0"
            >
              <svg
                class=""
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 9L9 15M9 9L15 15M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
                  stroke="#1B2029"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
              <div />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Search Input Text animation 1`] = `
<body>
  <div>
    <div
      class="flex flex-col shadow-[0px_1px_2px_0px_rgba(27,32,41,0.06)] "
    >
      <label
        class=" label-medium text-text-dark mb-2 flex items-center text-left font-medium "
        for="user-input"
      >
        This is Label
      </label>
      <div
        aria-label=""
        class=" !h-12 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
        role="textbox"
        tabindex="-1"
      >
        <div
          class="mr-2 text-icon-icon "
        >
          <div
            class="flex"
            tabindex="-1"
          >
            <svg
              class=""
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_1421_18480)"
              >
                <path
                  clip-rule="evenodd"
                  d="M15.96 10.2C15.96 13.3812 13.3812 15.96 10.2 15.96C7.01884 15.96 4.44 13.3812 4.44 10.2C4.44 7.01884 7.01884 4.44 10.2 4.44C13.3812 4.44 15.96 7.01884 15.96 10.2ZM14.7567 15.7749C13.5155 16.7906 11.9289 17.4 10.2 17.4C6.22355 17.4 3 14.1764 3 10.2C3 6.22355 6.22355 3 10.2 3C14.1765 3 17.4 6.22355 17.4 10.2C17.4 11.9289 16.7906 13.5155 15.7749 14.7567L20.7891 19.7709C21.0703 20.0521 21.0703 20.5079 20.7891 20.7891C20.5079 21.0703 20.0521 21.0703 19.7709 20.7891L14.7567 15.7749Z"
                  fill="#3B475B"
                  fill-rule="evenodd"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_1421_18480"
                >
                  <rect
                    fill="white"
                    height="24"
                    width="24"
                  />
                </clippath>
              </defs>
            </svg>
            <div />
          </div>
        </div>
        <div
          class="relative flex-1"
        >
          <input
            class=" placeholder:!text-text-light placeholder:!animate-scroll search-icon-remover paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="user-input"
            helpertext="This is helper Text"
            id="user-input"
            name="user-input"
            placeholder=""
            tabindex="0"
            type="text"
            value=""
          />
        </div>
        <div
          class="ml-2 text-icon-icon cursor-pointer"
        >
          <button
            class="flex justify-center"
            tabindex="-1"
            type="button"
          >
            <div>
              <div />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
